<resources>
    <string name="app_name">ĐẶT MÓN ĂN</string>
    <string name="label1">NHÀ HÀNG PHẠM HUY</string>
    <string name="datmonan">Đặt món ăn</string>
    <string name="suamonan">Sửa món ăn</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="design_by_qhuypham">Design by QHuyPham</string>
    <string name="txtMonAn">TextView</string>
    <string name="txtGia">TextView</string>
    <string name="imgGiam">TODO</string>
    <string name="imgTang">TODO</string>
    <string name="imgFB">TODO</string>
    <string name="imgCall">TODO</string>
</resources>