<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="281dp"
        android:layout_height="31dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/label1"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnDatMonAn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="256dp"
        android:background="@drawable/corner"
        android:text="@string/datmonan"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <Button
        android:id="@+id/btnSuaMonAn"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/corner"
        android:text="@string/suamonan"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:onClick="SuaMonAn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDatMonAn" />

    <Button
        android:id="@+id/btnThanhToan"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/corner"
        android:onClick="thanhtoan"
        android:text="@string/thanhtoan"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSuaMonAn" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/design_by_qhuypham"
        android:textColor="@color/mauden"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnThanhToan" />

    <pl.droidsonroids.gif.GifTextView
        android:layout_width="229dp"
        android:layout_height="229dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@+id/btnDatMonAn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <ImageView
        android:id="@+id/imgFB"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="108dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/facebook"
        android:contentDescription="@string/imgFB" />

    <ImageView
        android:id="@+id/imgPhone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="108dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/phone"
        android:contentDescription="@string/imgCall" />

</androidx.constraintlayout.widget.ConstraintLayout>